[project]
name = "peasy-css"
version = "0.1.1"
description = "Python CSS toolkit — generate gradients, shadows, borders, flexbox, grid, animations, transforms, and 7 more CSS utilities. Zero dependencies."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Peasy Tools" }]
keywords = [
    "css",
    "css-generator",
    "gradient",
    "box-shadow",
    "border-radius",
    "flexbox",
    "grid",
    "animation",
    "transform",
    "css-tools",
    "css-toolkit",
    "responsive",
    "media-query",
    "typography",
    "css-filter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
    "Environment :: Console",
]
dependencies = []

[project.optional-dependencies]
api = ["httpx>=0.27"]
cli = ["typer>=0.15", "rich>=13.0"]
mcp = ["mcp>=1.0"]
all = ["peasy-css[api,cli,mcp]"]

[project.scripts]
peasy-css = "peasy_css.cli:app"

[project.entry-points."mcp.servers"]
peasy-css = "peasy_css.mcp_server:mcp"

[project.urls]
Homepage = "https://peasycss.com"
"CSS Gradient Generator" = "https://peasycss.com/tools/gradient-generator/"
"Box Shadow Generator" = "https://peasycss.com/tools/box-shadow-generator/"
"Flexbox Generator" = "https://peasycss.com/tools/flexbox-generator/"
Documentation = "https://peasycss.com/developers/"
Repository = "https://github.com/peasytools/peasy-css"
Issues = "https://github.com/peasytools/peasy-css/issues"
Changelog = "https://github.com/peasytools/peasy-css/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peasy_css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
strict = true

[dependency-groups]
dev = [
    "httpx>=0.27",
    "mcp>=1.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "rich>=13.0",
    "ruff>=0.15.4",
    "typer>=0.15",
]
